(feat, fix) wallet상세 페이지 이동을 위한 router추가
